# These files will end up in the install include directory
# For example, /usr/include
includedir = $(prefix)/include/mle

include_HEADERS = \
	$(top_srcdir)/../../common/include/mle/AtkBasicArray.h \
	$(top_srcdir)/../../common/include/mle/AtkCommonStructs.h \
	$(top_srcdir)/../../common/include/mle/AtkWired.h \
	$(top_srcdir)/../../common/include/mle/AtkWireFunc.h \
	$(top_srcdir)/../../common/include/mle/AtkWire.h \
	$(top_srcdir)/../../common/include/mle/AtkWireMsg.h \
	$(top_srcdir)/../../common/include/mle/mleatk_rehearsal.h \
	$(top_srcdir)/../../linux/include/mle/MlePlayer.h
	